# teleport-harness

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
components/agent-runner/: prebuild.sh  render.yaml  services.yml.j2
components/oidc-server/: prebuild.sh  render.yaml  services.yml.j2
components/terraform-runner/: prebuild.sh  render.yaml  services.yml.j2
harness/: __init__.py  agent.py  agent_mcp.py  checks.py  cli.py  cluster.py  models.py  render.py  report.py  share.py  verify.py
harness/templates/: auth.yaml.j2  base.compose.yml.j2
ingress/: docker-compose.yml
ingress/config/: nginx.conf
ingress/scripts/: certs-entrypoint.sh
lib/: admin.sh  agent.sh  assert.sh  build.sh  cluster.sh  common.sh  doctor.sh  ingress.sh  plan.sh  report.sh  share.sh  verify.sh
modules/bound_keypair/: checks.sh  compose.yml.j2  module.yaml  render.sh  render.yaml  services.yml.j2
modules/bound_keypair_apply_on_startup/: checks.py  module.yaml  render.yaml  services.yml.j2
modules/docs_bound_keypair/: module.yaml  prompt.md  render.yaml  services.yml.j2
modules/generic_oidc/: checks.sh  compose.yml.j2  module.yaml  prebuild.sh  render-resources.sh  render.sh  render.yaml  services.yml.j2  verify.sh
modules/kubernetes/: module.yaml  render.yaml  services.yml.j2
plans/: bots.yaml  docs.yaml  oidc-caching.yaml  terraform.yaml
spike/: docker-compose.yml  run.sh
targets/: default.env.example
tests/: test_agent.py  test_bound_keypair_apply_on_startup.py  test_models.py  test_plans.py  test_render.py  test_report.py  test_share.py  test_verify.py
(+102 files in other folders)
